Se resumio un poco mas lo de teze

--- a/3° Año/Metodología de la Investigación/4. Investigación en Cs. de la Computación.md
+++ b/3° Año/Metodología de la Investigación/4. Investigación en Cs. de la Computación.md
@@ -46,17 +46,17 @@ No hay consenso en una clasificación general de métodos de investigación.  Ve
 
 #### Métodos Lógicos Formales
 
-- **Métodos Lógicos Deductivos**: La lógica deductiva consiste en deducir conclusiones a partir de premisas usando reglas de inferencia y axiomas como punto de partida. Si los axiomas son verdaderos, los teoremas también lo son. Este método a su vez se puede separar en dos premisas, los métodos deductivos directos, donde se parte de una premisa y se llega a una conclusión. Y los indirectos donde se utilizan y aplican reglas de inferencia.
-- **Métodos Lógicos Inductivos**: El método inductivo parte de enunciados particulares, como observaciones o experimentos, hacia enunciados universales, como hipótesis o teorías. Va de lo particular a lo general, utilizando casos para hacer inferencias. Este método a su vez se puede separar en dos enfoques, la inducción completa (conclusión a partir de todos los elementos que conforman el objeto de estudio). Y la inducción incompleta (generalizaciones basadas en muestras representativas).
+- **Métodos Lógicos Deductivos**: Usan axiomas y reglas de inferencia para deducir conclusiones. Si los axiomas son verdaderos, las conclusiones también. Se dividen en directos (de premisa a conclusión) e indirectos (aplican reglas de inferencia).
+- **Métodos Lógicos Inductivos**: Empiezan con enunciados específicos, como observaciones, y llegan a generalizaciones o teorías. Se clasifican en inducción completa (conclusiones de todos los elementos del objeto de estudio) e inducción incompleta (generalizaciones de muestras representativas).
 #### Métodos Lógicos de Soporte
 
 Son los métodos que utiliza la informática para abordar los fenómenos y resolver las situaciones problemáticas, este método comprende distintas variantes, entre ellas encontramos:
 
-- **Método Analógico**: Hace uso de analogías, a partir de la semejanza de algunas características entre dos objetos. Va de lo particular a lo particular, es decir, de un caso a otro. Es un esquema de razonamiento que no posee un alto grado de certeza, susceptible de falacias.
-- **Método Analítico**: El método analítico es un método que implica análisis, esto implica la descomposición de una idea o un objeto en sus elementos; descompone un todo en sus elementos básicos, por tanto, va de lo general a lo específico. Va de lo concreto a lo abstracto, ya que se parte del todo que es un concreto real, y se pasa a las partes, que son la parte abstracta.
-- **Método Sintético**: Contrario al método analítico, el método sintético implica la síntesis, esto implica la reunión racional de varios elementos en una nueva totalidad. Se realiza sobre la base de los resultados del análisis.
-- **Método Sistémico**: Estudio de los sistemas en su totalidad, complejidad y dinámica propia, esto implica la reunión racional de varios elementos dispersos en una nueva totalidad, este se presenta más en el planteamiento de la hipótesis.
-- **Método de Modelado**: La modelación es el proceso mediante el cual se crea una representación o modelo para investigar la realidad. Se crean abstracciones con el propósito de explicar la realidad. El modelo es el sustituto del objeto de investigación. Se constituye una reproducción simplificada de la realidad que cumple una función heurística que permite descubrir nuevas relaciones y cualidades del objeto de estudio. Todas las inferencias e hipótesis se plantearán sobre el modelo.
+- **Método Analógico**: Basado en realizar semejanzas entre objetos, razona de un caso a otro. Puede carecer de certeza y es propenso a falacias.
+- **Método Analítico**: Descompone ideas o objetos en elementos, yendo de lo general a lo específico o de lo concreto a lo abstracto.
+- **Método Sintético**: Combina racionalmente elementos individuales formando un nuevo todo, basándose en resultados del análisis.
+- **Método Sistémico**: Examina sistemas en su totalidad y dinámica, integrando varios elementos dispersos.
+- **Método de Modelado**: Crea modelos simplificados de la realidad con el fin de representarla y entenderla, siendo estos modelos el foco de análisis e inferencias.
 
 ## Método Hipotético Deductivo
 
@@ -75,19 +75,18 @@ La investigación empírica se basa en experimentación u observación para resp
 
 #### Método Empírico Cuantitativo
 
-Son aquellos en los que se recogen y analizan datos cuantitativos sobre variables. La investigación cuantitativa trata de determinar la fuerza de asociación o correlación entre variables, la generalización y objetivación de los resultados a través de distintas técnicas, tras el estudio de la asociación o correlación pretende, a su vez, hacer inferencia causal que explique por qué las cosas suceden o no de una forma determinada. Se dividen en:
-- **Experimentales controlados**: Manipulan variables independientes.
-	- **Replicación**: Desarrollo de múltiples versiones de un producto, medir diferencias e hipotetizar sobre las posibles causas.
-	- **Sintético**: Reproducir un factor en entornos específicos, y sacar conclusiones acerca de la diferencia.
-	- **Análisis Dinámico**: involucra la medición de performance, y las variaciones de la misma. Suele verse en papers de aplicación, donde se mide la eficiencia de diferentes algoritmos en distintos escenarios.
-	- **Simulación**: utilizar datos artificiales para testear el modelado realizado. Suele verse en papers de aplicación, donde se utilizan repositorios de datos creados artificialmente para hacer un primer testeo de la técnica a utilizar.
-- **Observacionales**: Recogen los datos relevantes mediante diferentes técnicas.
-	- **Análisis estático**: examinar completamente las diferentes partes que hacen a la estructura de un producto, hipotetizando causas para efectos bajo estudio.
-	- **Monitoreo de proyectos**: se realiza el deploy de un proyecto y luego se observa el comportamiento del mismo en el mundo real, así como el impacto del mismo en el mundo.
-	- **Surveys**: realizar encuestas y cuestionarios tratando de identificar características preponderantes del objeto de estudio, para modelar el estado actual de eventos. En ciencias de la computación podríamos desarrollar una herramienta basada en argumentación que sirva para modelar que puntos clave influir para cambiar la opinión pública. Las encuestas servirían tanto para entender a que debemos prestar atención como para validar luego los resultados.
-	- **Caso de estudio**: similar al monitoreo de proyectos, pero realizado con una profundidad mucho mayor.
-	- **Estudio de Campo**: chequear múltiples proyectos, de diversa naturaleza, y testear un aspecto común entre estos para distinguir diferencias en comportamiento.
-
+La investigación cuantitativa analiza datos numéricos sobre variables, buscando asociaciones, generalizaciones y causas. Además de realizar una inferencia causal que explique por qué las cosas suceden o no de una forma determinada. Se dividen en:
+- **Experimentales controlados**: Se manipulan variables.
+    - **Replicación**: Crea varias versiones de un producto y examina las diferencias.
+    - **Sintético**: Evalúa un factor en contextos específicos.
+    - **Análisis Dinámico**: Mide el rendimiento y la variación de este mismo, especialmente en aplicaciones.
+    - **Simulación**: Testea modelos usando datos artificiales, común en aplicaciones.
+- **Observacionales**: Recolectan datos usando diversas técnicas.
+    - **Análisis estático**: Investiga las partes de un producto, hipotetizando causas.
+    - **Monitoreo de proyectos**: Observa el comportamiento real de un proyecto desplegado.
+    - **Surveys**: Usa encuestas para identificar y modelar características actuales.
+    - **Caso de estudio**: Similar al monitoreo de proyectos, pero se realiza un análisis profundo.
+    - **Estudio de Campo**: Examina múltiples proyectos para discernir comportamientos comunes.
 #### Métodos Empíricos Cualitativos
 
 En estos métodos se evita la cuantificación. Los investigadores cualitativos, generalmente, hacen registros narrativos de los fenómenos que son estudiados mediante técnicas como la observación participante y las entrevistas no estructuradas. Describen o explican el fenómeno estudiado, la esencia, naturaleza y comportamiento, en pocas palabras, los métodos cualitativos implican la recopilación sistemática y la interpretación de datos no numéricos, incluyendo palabras, imágenes, percepciones, entre muchos otros.
