--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -16,7 +16,7 @@ Las características de diseño que la influencian este criterio son las siguien
 - **Diseño de sintaxis**: Posiblemente, la característica que más afecte a la legibilidad. Al momento de crear la sintaxis de un lenguaje de programación, se deben tener en cuanta las siguientes cuestiones:
 	1. La estructura de los identificadores, la cantidad de caracteres que puede usarse para definir el nombre de las variables, la sensibilidad a las mayúsculas, entre otras cosas, son aspectos que impactan directamente en la legibilidad de un programa.
 	2. Las palabras especiales, la legibilidad de los programas, se ve influenciada en gran medida por la forma de las palabras especiales (while, class, for, etc). Es extremadamente importante tener en cuenta la forma de las declaraciones compuestas o del grupo de declaraciones, sobre todo en las estructuras de control. Además, se debe saber si se va a permitir el uso de estas palabras especiales para la declaración de variables, aunque esto disminuye la legibilidad.
-	3. La forma y el significado de las declaraciones y sentencias afecta directamente en la legibilidad de los programas, por lo general se busca, aunque sea de forma marcial, que el significado de la sentencia se vea plasmado mediante su sintáxis.
+	3. La forma y el significado de las declaraciones y sentencias afecta directamente en la legibilidad de los programas, por lo general se busca, aunque sea de forma marcial, que el significado de la sentencia se vea plasmado mediante su sintaxis.
 
 >[!tldr] Simplicidad vs Legibilidad
 >Si bien tanto la simplicidad como la legibilidad son aspectos muy importantes a la hora del diseño, se debe encontrar un equilibrio entre estos dos atributos, ya que un lenguaje extremadamente simple le quita legibilidad al código escrito en este, mientras que un lenguaje muy legible su código se torna difícil de escribir.
@@ -24,7 +24,7 @@ Las características de diseño que la influencian este criterio son las siguien
 #### Facilidad de Escritura
 
 La facilidad de escritura está relacionada con como de fácil es escribir un programa en dicho lenguaje para un dominio de aplicación determinado. Gran parte de las características que afectan la legibilidad también afectan a la facilidad de escritura, el mejor ejemplo en el caso de la simplicidad y la ortogonalidad es mejor que el lenguaje brinde un número pequeño de constructores primitivos y un conjunto de reglas consistentes para la combinación de estos mismos, de forma que el programador pueda aprender de forma rápida el lenguaje y resolver los problemas.
-Adémas de estas características antes mencionadas, la facilidad de escritura depende de otras características propias de este criterio, entre ellas:
+Además de estas características antes mencionadas, la facilidad de escritura depende de otras características propias de este criterio, entre ellas:
 
 - **Soporte a la Abstracción**: Se refiere a la capacidad del lenguaje para brindar los mecanismos de abstracción de datos (clases, estructuras, registros, etc) y de procesos (funciones, procedimientos, paquetes, etc). Obviamente que aquellos lenguajes que soporten punteros o asignación dinámica de memoria van a poseer un mayor soporte a la abstracción que aquellos donde no se los soporta.
 - **Expresividad**: La expresividad, por su parte, puede referirse a varias características diferentes, por ejemplo APL cuanta con muchos operadores poderosos, que permiten lograr muchos cálculos en pocas líneas de código. Por Ej.: +/ 1 2 3 cuya saluda es 6. En cambio, otros lenguajes de programación optan por simplificar la forma de escribir los cálculos o especificar las estructuras de control, algunos de estos ejemplos son:
@@ -62,8 +62,8 @@ A niveles generales, los costos relacionados con el uso de un determinado lengua
 - **Costo de compilación**: Está relacionado con el tamaño del compilador, el tiempo que tarda en traducir el código fuente.
 - **Costo de ejecución**: Este aspecto se ve influenciado por el diseño del lenguaje, por ejemplo, si el chequeo de tipos se realiza en tiempo de ejecución, se deberá tener cargada la tabla de símbolos en memoria todo el tiempo, lo que se traduce en un mayor uso de memoria y una mayor sobrecarga al procesador. También va a depender de las optimizaciones que realiza el compilador al código objeto.
 - **Costo del sistema de implementación**: Relacionado con la disponibilidad de compiladores gratuitos o la posibilidad de correr los programas en cualquier hardware.
-- **Costo relacionado con la confiabilidad**: poca confiabilidad lleva a costos muy altos.
-- **Costo de mantenimiento**: depende de varias características del lenguaje, principalmente de la legibilidad y facilidad de escritura.
+- **Costo relacionado con la confiabilidad**: Poca confiabilidad lleva a costos muy altos.
+- **Costo de mantenimiento**: Depende de varias características del lenguaje, principalmente de la legibilidad y facilidad de escritura.
 
 >[!tldr] Criterios Adicionales
 >Debido a que no existe un consenso general a la hora de establecer los criterios de evaluación de un lenguaje de programación, otros autores también tienen en cuenta aspectos como la portabilidad, la generalidad y la buena definición de un lenguaje al momento de su evaluación.
