Correcion y agregue cosas del cuadernillo de SO

--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -36,7 +36,7 @@ La reasignación de las instrucciones y los datos a direcciones de memoria puede
 
 #### Asignación de Memoria
 
-A la hora de asignar las celdas de memoria en donde va a residir nuestros procesos, existen dos modelos, el primero consiste en partir a la memoria en partes de igual tamaña o algunas más grandes y otras más pequeñas, lo importante a resaltar de este método es que el grado de multiprogramación va a ser fijado por la cantidad de particiones de la memoria, a este modelo se lo llama ***modelo particiones fijas***, en este modelo, los procesos son asignados al *agujero* en el que este pueda entrar y en el caso de que le sobre espacio, este se desperdiciará.
+A la hora de asignar las celdas de memoria en donde va a residir nuestros procesos, existen dos modelos, el primero consiste en partir a la memoria en partes de igual tamaño o algunas más grandes y otras más pequeñas, lo importante a resaltar de este método es que el grado de multiprogramación va a ser fijado por la cantidad de particiones de la memoria, a este modelo se lo llama ***modelo particiones fijas***, en este modelo, los procesos son asignados al *agujero* en el que este pueda entrar y en el caso de que le sobre espacio, este se desperdiciará.
 En el otro modelo nosotros tendremos aun así la memoria partida en una determinada cantidad de partes, pero en este caso se toma a todas esos segmentos de memoria y los interpreta como si fuera un gran *agujero*, de este modo nosotros podemos asignar a más de un proceso a un mismo segmento de memoria y hacer uso más eficiente de la memoria. A este modelo es llamado ***modelo de particiones dinámicas***.
 Para ambos modelos existen una serie de algoritmos que van a establecer la manera en la que se van colocando los procesos en la memoria principal, estos algoritmos son los siguientes:
 
@@ -92,7 +92,7 @@ En el sistema de segmentación se toma a la memoria principal como un gran hueco
 A nivel de implementación, todos los sistemas operativos que utilizan segmentación cuentan con una tabla de segmentos, que posee cada uno de los segmentos que se encuentran en memoria, esta tabla posee dos datos muy importantes, la base del segmento y su tamaño. En este esquema la siguiente instrucción a ejecutar está conformada por el siguiente par **\<id_segmento, desplazamiento\>**.
 
 >[!tldr] Segmentación Paginada
->En los sistemas operativos más modernos se utiliza un esquema de segmentación paginada, el programa se divido en distintos segmentos correspondientes a cada una de las rutinas del programa, al momento de subir esos segmentos a memoria el sistema operativo le asigna un conjunto de páginas en las que se va a ubicar el segmento.
+>En los sistemas operativos más modernos se utiliza un esquema de segmentación paginada, el programa se divide en distintos segmentos correspondientes a cada una de las rutinas del programa, al momento de subir esos segmentos a memoria el sistema operativo le asigna un conjunto de páginas en las que se va a ubicar el segmento.
 
 ---
 
