Se agrego cosas a SO 2

--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -78,7 +78,7 @@ Las tablas de páginas cuenta con una serie de bits que utilizan como indicadore
 	- 10 -> solo lectura.
 	- 01 -> lectura escritura.
 	- 11 -> lectura, escritura y ejecución.
-- **Bit Modificado**: Cuando el bit es 1 nos indica que el marco asociado a la página ha sido modificado, cunado este es 0 índica que el marco asociado a la página no ha sido modificado.
+- **Bit Modificado**: Cuando el bit es 1 nos indica que el marco asociado a la página ha sido modificado, cuando este es 0 índica que el marco asociado a la página no ha sido modificado. Se actualiza al disco, si termina el proceso.
 - **Bit de Referencia**: Este bit es utilizado por algunos algoritmos de reemplazo de página. Cuando el bit está en 1 indica que la página ha sido referenciada, y cunado el bit es 0 indica que la página no ha sido referenciada.
 
 >[!tldr] Hiperpaginación
@@ -92,7 +92,7 @@ En el sistema de segmentación se toma a la memoria principal como un gran hueco
 A nivel de implementación, todos los sistemas operativos que utilizan segmentación cuentan con una tabla de segmentos, que posee cada uno de los segmentos que se encuentran en memoria, esta tabla posee dos datos muy importantes, la base del segmento y su tamaño. En este esquema la siguiente instrucción a ejecutar está conformada por el siguiente par **\<id_segmento, desplazamiento\>**.
 
 >[!tldr] Segmentación Paginada
->En los sistemas operativos más modernos se utiliza un esquema de segmentación paginada, el programa se divide en distintos segmentos correspondientes a cada una de las rutinas del programa, al momento de subir esos segmentos a memoria el sistema operativo le asigna un conjunto de páginas en las que se va a ubicar el segmento.
+>En los sistemas operativos más modernos se utiliza un esquema de segmentación paginada, el programa se divide en distintos segmentos correspondientes a cada una de las rutinas del programa, al momento de subir esos segmentos a memoria el sistema operativo le asigna un conjunto de páginas en las que se va a ubicar el segmento. 
 
 ---
 
