--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -16,7 +16,7 @@ Las características de diseño que la influencian este criterio son las siguien
 - **Diseño de sintaxis**: Posiblemente, la característica que más afecte a la legibilidad. Al momento de crear la sintaxis de un lenguaje de programación, se deben tener en cuanta las siguientes cuestiones:
 	1. La estructura de los identificadores, la cantidad de caracteres que puede usarse para definir el nombre de las variables, la sensibilidad a las mayúsculas, entre otras cosas, son aspectos que impactan directamente en la legibilidad de un programa.
 	2. Las palabras especiales, la legibilidad de los programas, se ve influenciada en gran medida por la forma de las palabras especiales (while, class, for, etc). Es extremadamente importante tener en cuenta la forma de las declaraciones compuestas o del grupo de declaraciones, sobre todo en las estructuras de control. Además, se debe saber si se va a permitir el uso de estas palabras especiales para la declaración de variables, aunque esto disminuye la legibilidad.
-	3. La forma y el significado de las declaraciones y sentencias afecta directamente en la legibilidad de los programas, por lo general se busca, aunque sea de forma marcial, que el significado de la sentencia se vea plasmado mediante su sintaxis.
+	3. La forma y el significado de las declaraciones y sentencias afecta directamente en la legibilidad de los programas, por lo general se busca, aunque sea de forma parcial, que el significado de la sentencia se vea plasmado mediante su sintaxis.
 
 >[!tldr] Simplicidad vs Legibilidad
 >Si bien tanto la simplicidad como la legibilidad son aspectos muy importantes a la hora del diseño, se debe encontrar un equilibrio entre estos dos atributos, ya que un lenguaje extremadamente simple le quita legibilidad al código escrito en este, mientras que un lenguaje muy legible su código se torna difícil de escribir.
