--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -12,7 +12,7 @@ En un sentido amplio, el objetivo de la investigación en ciencia radica en resp
 
 #### Contribución
 
-La investigación está planteada para extender el cuerpo de conocimiento y comprensión universal (en contraste con extender el conocimiento y comprensión del investigador únicamente). En cuanto al tamaño de la contribución, no es necesario resolver todos los problemas del mundo de una sola vez. Tampoco es suficiente si la misma es un incremento insignificante. Puede ser difícil de medir para alguien inexperimentado.
+La investigación está planteada para extender el cuerpo de conocimiento y comprensión universal (en contraste con extender el conocimiento y comprensión del investigador únicamente). En cuanto al tamaño de la contribución, no es necesario resolver todos los problemas del mundo de una sola vez. Tampoco es suficiente si la misma es un incremento insignificante. Puede ser difícil de medir para alguien inexperto.
 
 #### Tipos de Objetivos de la Investigación
 
@@ -26,7 +26,7 @@ El objetivo específico de una investigación puede ser de diversos tipos. Una c
 	- Eliminación de causas alternativas plausibles, para que la relación entre A y B sea verdadera, no debe existir un C causal de ambos A y B tal que al controlar la variable C la relación entre A y B desaparece. Este paso en particular es el punto más dificultoso.
 
 >[!note] Nota
->Cabe acarar que muchas veces un trabajo científico no se enmarca solo en uno de estos objetivos, sino que en un mismo artículo se puede realizar una descripción y una explicación, todo va a depender del enfoque que le dé el investigador.
+>Cabe aclarar que muchas veces un trabajo científico no se enmarca solo en uno de estos objetivos, sino que en un mismo artículo se puede realizar una descripción y una explicación, todo va a depender del enfoque que le dé el investigador.
 ## Modelos de Procesos de Investigación
 
 #### Modelo Secuencial
@@ -125,5 +125,5 @@ Una hipótesis es una afirmación tentativa sujeta a verificación. Pueden ser e
 
 - **Hipótesis de Investigación**: Este tipo de hipótesis son descriptivas de un valor o dato pronosticado, correlacionales, de diferencia de grupos, o incluso causales.
 - **Hipótesis Nulas**: Las hipótesis nulas son, en cierto modo, el reverso de las hipótesis de investigación. Por Ej.: partiendo de la siguiente hipótesis "*El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo*.", la hipótesis nula de esta sería la siguiente: "*El uso de servicios en la nube no provoca una mejora en la productividad de los trabajos realizados en equipo*."
-- **Hipótesis Alternativas**: Son posibilidades alternas de las hipótesis de investigación y nula, ofrecen una descripción o explicación distinta de las que proporcionan éstas inicialmente, donde cada alternativa constituye una descripción distinta de las que proporcionan las hipótesis de investigación y nula. Por Ej.: partiendo de la hipótesis "*A mayor uso de clases virtuales, mayor es el rendimiento académico del alumno*". Una posible hipótesis alternativa podría ser: "A mayor uso de clases virtuales, mayor es el desinterés por participar en clase."
+- **Hipótesis Alternativas**: Son posibilidades alternas de las hipótesis de investigación y nula, ofrecen una descripción o explicación distinta de las que proporcionan estas inicialmente, donde cada alternativa constituye una descripción distinta de las que proporcionan las hipótesis de investigación y nula. Por Ej.: partiendo de la hipótesis "*A mayor uso de clases virtuales, mayor es el rendimiento académico del alumno*". Una posible hipótesis alternativa podría ser: "A mayor uso de clases virtuales, mayor es el desinterés por participar en clase."
 
