Correcciones LP yMS

--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -10,7 +10,7 @@ Las características de diseño que la influencian este criterio son las siguien
 
 >[!caution] Excepciones a la Regla
 >Supongamos que otro lenguaje de programación no permite asignar punteros para apuntar a un array, esto no sería una falta de ortogonalidad, sino que es una *excepción a la regla* establecida por el lenguaje.
->Para evitar esta que ocurran muchas de estas excepciones a las reglas se debe encontrar un nivel adecuado de ortogonalidad, de este modo el lenguaje poseerá una mayor regularidad y será más fácil de aprender, leer y escribir. Por el contrario, si el lenguaje posee mucha ortogonalidad este se poseerá una complejidad innecesariamente alta, y en caso de que la ortogonalidad sea baja, esto derivaría en muchas excepciones a la regla.
+>Para evitar esta que ocurran muchas de estas excepciones a las reglas se debe encontrar un nivel adecuado de ortogonalidad, de este modo el lenguaje poseerá una mayor regularidad y será más fácil de aprender, leer y escribir. Por el contrario, si el lenguaje posee mucha ortogonalidad este poseerá una complejidad innecesariamente alta, y en caso de que la ortogonalidad sea baja, esto derivaría en muchas excepciones a la regla.
 
 - **Tipos de datos**: Esta característica va relacionada con la facilidad de definir tipos y estructuras de datos.
 - **Diseño de sintaxis**: Posiblemente, la característica que más afecte a la legibilidad. Al momento de crear la sintaxis de un lenguaje de programación, se deben tener en cuanta las siguientes cuestiones:
