--- a/3° Año/Metodología de Sistemas I/Unidad 11/1. Calidad.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 11/1. Calidad.md
@@ -54,7 +54,7 @@ Funcionan como una guía para las organizaciones y desarrolladores que quieran l
 2. **Estándares de proceso**: Establecen los procesos que deben seguirse durante el desarrollo del software (especificación, diseño, validación, etc.).
 
 A día de hoy existen una cantidad de estándares que permiten asegurar la calidad de un sistema de software, por ejemplo, el estándar ***ISO/IEC 9126*** permite a cada organización establecer su propio modelo de calidad en función de las características del software que se quiera evaluar. La calidad puede analizarse desde una perspectiva interna, externa o en uso. En este estándar se mide el grado de calidad en base a una serie de atributos, cabe recalcar que es difícil cumplir con todos los atributos propuestos por el estándar, es por eso que las organizaciones deben elegir aquellos atributos en los que quieren centrarse para considerar el producto de calidad.
-Años después se crea la norma ***ISO/IEC 25000***, la cual es una familia de normas que tiene por objetivo la creación de un marco de trabajo común para evaluar la calidad del producto software, esta norma es el resultado de la evolución de otras normas anteriores, especialmente de las ***ISO/IEC*** y ***ISO/IEC 14598***. Esta familia de normas está compuesta por cinco divisiones: gestión de la calidad, modelo de calidad, medición de calidad, requisitos de calidad y evaluación de la calidad.
+Años después se crea la norma ***ISO/IEC 25000***, la cual es una familia de normas que tiene por objetivo la creación de un marco de trabajo común para evaluar la calidad del producto software, esta norma es el resultado de la evolución de otras normas anteriores, especialmente de las ***ISO/IEC 9126*** y ***ISO/IEC 14598***. Esta familia de normas está compuesta por cinco divisiones: gestión de la calidad, modelo de calidad, medición de calidad, requisitos de calidad y evaluación de la calidad.
 
 ### El Proceso de Mejora del Proceso
 
