corrección de palabras

--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -15,7 +15,7 @@ Las características de diseño que la influencian este criterio son las siguien
 - **Tipos de datos**: Esta característica va relacionada con la facilidad de definir tipos y estructuras de datos.
 - **Diseño de sintaxis**: Posiblemente, la característica que más afecte a la legibilidad. Al momento de crear la sintaxis de un lenguaje de programación, se deben tener en cuanta las siguientes cuestiones:
 	1. La estructura de los identificadores, la cantidad de caracteres que puede usarse para definir el nombre de las variables, la sensibilidad a las mayúsculas, entre otras cosas, son aspectos que impactan directamente en la legibilidad de un programa.
-	2. Las palabras especiales, la legibilidad de los programas, se ve influenciada en gran medida por la forma de las palabras especiales (while, class, for, etc). Es extremadamente importante tener en cuenta la forma de las declaraciones compuestas o del grupo de declaraciones, sobre todo en las estructuras de control. Además, se debe saber si se va a permitir el uso de estas palabras especiales para la declaración de variables, aunque esto disminuye la legibilidad.
+	2. Las palabras especiales, la legibilidad de los programas, se ve influenciada en gran medida por la forma de las palabras especiales (while, class, for, etc). Es extremadamente importante tener en cuenta la forma de las sentencias compuestas o del grupo de sentencias, sobre todo en las estructuras de control. Además, se debe saber si se va a permitir el uso de estas palabras especiales para la declaración de variables, aunque esto disminuye la legibilidad.
 	3. La forma y el significado de las declaraciones y sentencias afecta directamente en la legibilidad de los programas, por lo general se busca, aunque sea de forma parcial, que el significado de la sentencia se vea plasmado mediante su sintaxis.
 
 >[!tldr] Simplicidad vs Legibilidad
@@ -26,7 +26,7 @@ Las características de diseño que la influencian este criterio son las siguien
 La facilidad de escritura está relacionada con como de fácil es escribir un programa en dicho lenguaje para un dominio de aplicación determinado. Gran parte de las características que afectan la legibilidad también afectan a la facilidad de escritura, el mejor ejemplo en el caso de la simplicidad y la ortogonalidad es mejor que el lenguaje brinde un número pequeño de constructores primitivos y un conjunto de reglas consistentes para la combinación de estos mismos, de forma que el programador pueda aprender de forma rápida el lenguaje y resolver los problemas.
 Además de estas características antes mencionadas, la facilidad de escritura depende de otras características propias de este criterio, entre ellas:
 
-- **Soporte a la Abstracción**: Se refiere a la capacidad del lenguaje para brindar los mecanismos de abstracción de datos (clases, estructuras, registros, etc) y de procesos (funciones, procedimientos, paquetes, etc). Obviamente que aquellos lenguajes que soporten punteros o asignación dinámica de memoria van a poseer un mayor soporte a la abstracción que aquellos donde no se los soporta.
+- **Soporte para la Abstracción**: Se refiere a la capacidad del lenguaje para brindar los mecanismos de abstracción de datos (clases, estructuras, registros, etc) y de procesos (funciones, procedimientos, paquetes, etc). Obviamente que aquellos lenguajes que soporten punteros o asignación dinámica de memoria van a poseer un mayor soporte a la abstracción que aquellos donde no se los soporta.
 - **Expresividad**: La expresividad, por su parte, puede referirse a varias características diferentes, por ejemplo APL cuanta con muchos operadores poderosos, que permiten lograr muchos cálculos en pocas líneas de código. Por Ej.: +/ 1 2 3 cuya saluda es 6. En cambio, otros lenguajes de programación optan por simplificar la forma de escribir los cálculos o especificar las estructuras de control, algunos de estos ejemplos son:
 	- En C, la notación: **count++** es más conveniente y más corta que: **count = count + 1**
 	- En Ada, el operador booleano **and then** es conveniente para especificar evaluación en cortocircuito.
