Se corrigio unidad 5 y algunas otras cosas sueltas de MI

--- a/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
+++ b/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
@@ -19,11 +19,13 @@ Para la comunicación de nuestros resultados existen diferentes opciones, entre 
 
 Los workshops y conferencias nacionales constituyen el lugar ideal para nuestro “*bautismo de fuego*” en la publicación y presentación de trabajos. Los Workshops y Conferencias suelen estar numerados consecutivamente, y su realización suele ser anual y por lo general suelen tener un acrónimo que los identifica. Por Ej.: CACIC siglas del Congreso Argentino en Ciencias de la Computación
 
-![[MI-congresoyeso.png]]
+![[MI-Estructura-cong-work 1.png]]
 
-![[MI-congreso-proceso.png]]
+### Proceso para Aceptación en un Congreso y Revista
 
-![[MI-revista-proceso.png]]
+![[MI-proceso-congreso.png]]
+
+![[MI-proceso-revista.png]]
 
 Los trabajo para congreso tienen entre 6 y 12 páginas en Ciencias de la Computación, esto puede variar en otras áreas de la ciencia. Mientras que un trabajo para revista debe contar con alrededor de entre 20 y 40 páginas.
 En los congresos los trabajos son numerados por edición; constituyen publicaciones “calientes” en una ventana de tiempo más reducida que una revista. Por otro lado, las revistas son numeradas por volumen y número. Se las denomina “publicaciones de archivo” (archival publications).
