--- a/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
+++ b/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
@@ -19,7 +19,7 @@ Para la comunicación de nuestros resultados existen diferentes opciones, entre 
 
 Los workshops y conferencias nacionales constituyen el lugar ideal para nuestro “*bautismo de fuego*” en la publicación y presentación de trabajos. Los Workshops y Conferencias suelen estar numerados consecutivamente, y su realización suele ser anual y por lo general suelen tener un acrónimo que los identifica. Por Ej.: CACIC siglas del Congreso Argentino en Ciencias de la Computación
 
-![[MI-Estructura-cong-work 1.png]]
+![[MI-Estructura-cong-work.png]]
 
 ### Proceso para Aceptación en un Congreso y Revista
 
