--- a/3° Año/Sistemas Operativos/Unidad 2/4. Concurrencia y Regiones Críticas.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/4. Concurrencia y Regiones Críticas.md
@@ -64,7 +64,7 @@ Las ventajas de este tipo de métodos es que son a sistemas con cualquier númer
 
 ## Interbloqueo Entre Procesos
 
-El interbloqueo tan es llamado normalmente como Abrazo Mortal, y esto ocurre cuando un conjunto de procesos está en espera por recursos y nunca cambia de estado porque los recursos por los que espera están siendo utilizados por otros procesos en estado de espera.
+El interbloqueo también es llamado normalmente como Abrazo Mortal, y esto ocurre cuando un conjunto de procesos está en espera por recursos y nunca cambia de estado porque los recursos por los que espera están siendo utilizados por otros procesos en estado de espera.
 Hay cuatro condiciones necesarias para que haya interbloqueo, conociéndoles se puede prevenirlos:
 
 1. **Condición de Exclusión Mutua**. Solo un proceso puede acceder a una región crítica a la vez.
