--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -38,8 +38,8 @@ Ahora bien, el pasaje de parámetros posee cierta semántica, de la cual derivan
 
 De estas distintas semánticas se desprenden los dos grandes modelos de pasajes de parámetros (modelos conceptuales) que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
 
-- **Por copia de valor**: Este tipo de métodos es mucho más seguro, ya que se protege al parámetro real y permite usar expresiones como parámetro real en el llamado a la unidad, con la desventaja de que a nivel de memoria es mucho más costoso.
-	- **Por valor**: El valor del parámetro real se copia en el formal y una vez se termina de ejecutar el parámetro real se mantiene intacto. Semántica ***in-mode***.
+- **Por copia de valor**: Este tipo de métodos es mucho más seguro, ya que se protege al parámetro real, con la desventaja de que a nivel de memoria es mucho más costoso.
+	- **Por valor**: El valor del parámetro real se copia en el formal y una vez se termina de ejecutar el parámetro real se mantiene intacto. Este tipo de pasaje de parámetros te  permite usar expresiones como parámetro real en el llamado a la unidad. Semántica ***in-mode***.
 	- **Por Resultado**: El valor del parámetro real se copia en el formal y una vez terminada la ejecución de la subrutina se copia el valor del parámetro formal en el real, modificando el ambiente de ejecución de la unidad llamadora. Semántico ***out-mode***.
 	- **Por Valor-Resultado**: en una combinación de ambos métodos, en la práctica se comporta más como el mecanismo *por resultado*. Semántica ***inout-mode***.
 - **Por referencia al valor**: La principal ventaja de este método es que se ocupa menos memoria al momento de ejecutar los programas, con la desventaja de que puede causar efectos colaterales y que el acceso es más lento.
