--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -38,9 +38,11 @@ Este criterio está relacionado con la capacidad de los programas de realizar su
 - **Chequeo de tipos**: El chequeo de tipos puede ocurrir en dos momentos distintos:
 	- En Java, se llevan a cabo los chequeos de tipos de todas las variables y expresiones en tiempo de compilación. Lo que té asegura que no se produzca ningún error al momento de la ejecución.
 	- En lenguajes como Python o PHP, el chequeo de tipos se realiza durante la ejecución, esto le quita un poco de confiabilidad al lenguaje, ya que los errores se tienen que buscar ejecutando el código.
-La legibilidad afecta la confiabilidad de escritura y ciclo de vida del software. Los programas difíciles de leer, son difíciles de escribir y modificar, por lo tanto, afectan las características que afectan a los criterios anteriores, afectan a la confiabilidad.
+
 >[!Important] A tener en Cuenta
 >El chequeo de tipos realizado en ejecución es extremadamente costoso, es por eso que siempre es preferible que el chequeo de tipos se realice durante la compilación, además los errores se detectan con mayor rapidez, haciendo menos costoso el proceso de corrección. 
+
+La legibilidad afecta la confiabilidad de escritura y ciclo de vida del software. Los programas difíciles de leer, son difíciles de escribir y modificar, por lo tanto, afectan las características que afectan a los criterios anteriores, afectan a la confiabilidad.
 
 >[!example] Cosas Extra de las Filminas
 >- En la versión original de C, no se realizaban chequeos de tipos entre parámetros en una llamada a una función, produciéndose múltiples errores en tiempo de ejecución.
@@ -67,19 +69,18 @@ A niveles generales, los costos relacionados con el uso de un determinado lengua
 
 >[!tldr] Criterios Adicionales
 >Debido a que no existe un consenso general a la hora de establecer los criterios de evaluación de un lenguaje de programación, otros autores también tienen en cuenta aspectos como la portabilidad, la generalidad y la buena definición de un lenguaje al momento de su evaluación.
+>La **portabilidad** o la facilidad con que pueden trasladarse los programas entre distintos ambientes, tanto a plataformas de hardware como de un sistema operativo a otro. La portabilidad está fuertemente influenciada por el grado de estandarización del lenguaje.
+>Mientras que la **Generalidad** del lenguaje, hace referencia a la aplicabilidad del lenguaje a una amplia gama de aplicaciones.
+>La **buena definición** del lenguaje de programación, es decir, la integridad y precisión del documento que define oficialmente al lenguaje, entre otros criterios.
 
-La **portabilidad** o la facilidad con que pueden trasladarse los programas entre distintos ambientes, tanto a plataformas de hardware como de un sistema operativo a otro. La portabilidad está fuertemente influenciada por el grado de estandarización del lenguaje.
 
-**Generalidad** del lenguaje, es decir, la aplicabilidad del lenguaje a una amplia gama de aplicaciones
-
-La **buena definición** del lenguaje de programación, es decir, la integridad y precisión del documento que define oficialmente al lenguaje, entre otros criterios.
 ## Atributos de los Lenguajes de Acuerdo al Software que Producen
 
 ![[LP-final.png]]
 
 La **eficiencia** es generalmente una cualidad combinada del lenguaje y su implementación. El lenguaje afecta la eficiencia adversamente si deshabilita ciertas optimizaciones que pueden ser aplicadas por el compilador, como vimos cuando hablamos de costo. Mientras que la implementación afecta la eficiencia adversamente si no tiene en cuenta todas las oportunidades relacionadas con guardar espacio y mejorar la velocidad.
-
 **Usable** lo afecta interfaz de usuario y el manejo de errores cometidos por el usuario
+
 >[!note] Nota
 >La localidad se refiere al poder saber en qué lugar se encuentra el error que se produjo.
 
