Se agrego unas cosas importantes a MS y MI

--- a/3° Año/Metodología de Sistemas I/Unidad 11/1. Calidad.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 11/1. Calidad.md
@@ -53,10 +53,26 @@ Funcionan como una guía para las organizaciones y desarrolladores que quieran l
 1. **Estándares del producto**: Se aplican al producto de software a desarrollar (requerimientos, documentación, codificación, etc.).
 2. **Estándares de proceso**: Establecen los procesos que deben seguirse durante el desarrollo del software (especificación, diseño, validación, etc.).
 
-A día de hoy existen una cantidad de estándares que permiten asegurar la calidad de un sistema de software, por ejemplo, el estándar ***ISO/IEC 9126*** permite a cada organización establecer su propio modelo de calidad en función de las características del software que se quiera evaluar. La calidad puede analizarse desde una perspectiva interna, externa o en uso. En este estándar se mide el grado de calidad en base a una serie de atributos, cabe recalcar que es difícil cumplir con todos los atributos propuestos por el estándar, es por eso que las organizaciones deben elegir aquellos atributos en los que quieren centrarse para considerar el producto de calidad.
+A día de hoy existen una cantidad de estándares que permiten asegurar la calidad de un sistema de software, por ejemplo, el estándar ***ISO/IEC 9126*** permite a cada organización establecer su propio modelo de calidad en función de las características del software que se quiera evaluar. La calidad puede analizarse desde una perspectiva **interna**, **externa** o **en uso**. En este estándar se mide el grado de calidad en base a una serie de atributos, cabe recalcar que es difícil cumplir con todos los atributos propuestos por el estándar, es por eso que las organizaciones deben elegir aquellos atributos en los que quieren centrarse para considerar el producto de calidad.
+
+>[!tldr] Atributos que Afecta a Cada Perspectiva
+>Atributos que afectan a la calidad externa e interna:
+>- Funcionalidad
+>- Eficiencia
+>- Fiabilidad
+>- Usabilidad
+>- Facilidad de Mantenimiento
+>- Portabilidad
+>
+>Atributos que afecta a la calidad en del producto en uso:
+>- Efectividad
+>- Productividad
+>- Integridad
+>- Satisfacción
+
 Años después se crea la norma ***ISO/IEC 25000***, la cual es una familia de normas que tiene por objetivo la creación de un marco de trabajo común para evaluar la calidad del producto software, esta norma es el resultado de la evolución de otras normas anteriores, especialmente de las ***ISO/IEC 9126*** y ***ISO/IEC 14598***. Esta familia de normas está compuesta por cinco divisiones: gestión de la calidad, modelo de calidad, medición de calidad, requisitos de calidad y evaluación de la calidad.
 
-### El Proceso de Mejora del Proceso
+## El Proceso de Mejora del Proceso
 
 Debido a que no existe un proceso de software “ideal” o “estándar” que sea aplicable en todas las organizaciones o para todos los productos de software, la mejora del proceso es una actividad que se realiza de forma continua debido a que el ambiente de negocios cambia constantemente. Dicha mejora no significa simplemente adoptar métodos, herramientas particulares o usar un proceso genérico publicado, ya que hay que considerar el entorno y cómo puede verse afectado por los cambios del proceso.
 
@@ -81,6 +97,8 @@ Las principales componentes del modelo CMMI son los siguientes:
 2. ***Metas específicas***: están asociadas con cada área de proceso y definen el estado deseable de dicha área.
 3. ***Metas genéricas***: asociadas con la institucionalización de la buena práctica.
 4. Un conjunto de ***buenas prácticas***, que son descripciones para lograr una meta.
+
+---
 
 >[!important] Conclusiones
 >- La valoración de la calidad del software es un ***proceso subjetivo***, donde el equipo de gestión de calidad tiene que usar su juicio para decidir si se logró un nivel aceptable de calidad.
