--- a/3° Año/Metodología de la Investigación/4. Investigación en Cs. de la Computación.md
+++ b/3° Año/Metodología de la Investigación/4. Investigación en Cs. de la Computación.md
@@ -34,13 +34,17 @@ La Junta identifica una gran variedad de ámbitos susceptibles de ser atacados, 
 
 # Métodos de I+D en Ciencias de la Computación
 
+>[!important] Rol de los Métodos
+>Los métodos nos permiten realizar dos cosas, en primer lugar nos permiten desarrollar nuevas tecnologías o proceso, ofreciendo nuevos productos y servicios al mundo real o virtual. Estos desarrollos muchas veces generan cambios en los paradigmas y en las teorías ya existentes, a su vez estas teorías conceptualizan objetos (Sistemas Operativos, Datos, Bases de Datos) y al mismo tiempo sustentan a los desarrollos.
+>Por otro lado, los métodos nos permiten estudiar fenómenos del mundo real o conceptos abstractos.
+
 El objetivo de la ciencia es adquirir conocimientos, la elección del método adecuado que nos permita conocer o modelar la realidad es, por tanto, fundamental. Hay dos grandes grupos de métodos, los ***lógicos*** que se basan en la utilización del pensamiento en sus funciones de deducción, análisis y síntesis. Y el ***empíricos*** los cuales se aproximan al conocimiento del objeto mediante el conocimiento directo y el uso de la experiencia.
 Los métodos se utilizan para abordar sus objetos de estudio, investigar los fenómenos que se presentan en el mundo real y explicar y justificar los desarrollos y/o la obtención de nuevos conocimientos.
 
 >[!tldr] Tipos de Ciencias
 >Las ***ciencias fácticas*** tienen por finalidad describir y explicar el conjunto de fenómenos de aquel sector de la realidad que recortan como su objeto de estudio. En cambio, las ***ciencias formales***, en un sentido general, tiene por finalidad el desarrollo y construcción de sistemas abstractos de pensamiento.
 
-No hay consenso en una clasificación general de métodos de investigación.  Veremos una clasificación que responde principalmente a la postura que adopta el informático al investigar fenómenos o al abordar problemas reales o virtuales. Cabe clarar que estas clases no son necesariamente excluyentes entre si.
+No hay consenso en una clasificación general de métodos de investigación.  Veremos una clasificación que responde principalmente a la postura que adopta el informático al investigar fenómenos o al abordar problemas reales o virtuales. Cabe aclarar que estas clases no son necesariamente excluyentes entre sí.
 
 ## Métodos Lógicos
 
